<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KISI</string>
    <string name="demo_email">testing2.4.0@bantook.se</string>
    <string name="demo_password">thomas123</string>
    <string name="take_tour">Take a tour</string>
    <string name="app_name_empty"></string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PasswordConfirm">Confirm password</string>
    <string name="AgreeTermsConditions">I agree to <u>KISI\'s Terms &amp; Conditions</u></string>
    <string name="RememberMe">Remember password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="slogan">The key in your phone</string>
    <string name="kisi">KISI</string>
    <string name="logo">Logo</string>
    <string name="slogantwo">Unlock your world</string>
    <string name="forgot">Forgot your password?</string>
    <string name="login_success">Login successful"</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share this place</string>
    <string name="log">Get log information</string>
    <string name="logout">Logout</string>
    <string name="setup">Setup KISI device</string>
    <string name="pressto">Press to secure unlock</string>
    <string name="opening">Opening lock…</string>
    <string name="share_owner_only">Only the owner of a place can create new keys.</string>
    <string name="share_title">Share place:</string>
    <string name="share_popup_msg">"Enter email and select locks you want to share:"</string>
    <string name="share_submit_button">Share!</string>
    <string name="share_success">Key for %s was created successfully.</string>
    <string name="share_error">You have to share at least one lock!</string>
    <string name="session_timeout_relogin">Session timeout. Please login again.</string>
    <string name="logout_in_progress">Logging out…</string>
    <string name="logout_successful">Logged out successfully.</string>
    <string name="blinkup_error">Blickup failed. Please try again.</string>
    <string name="blinkup_setting_up">Setting up your KISI device</string>
    <string name="blinkup_success">Success!\nPlease go to the KISI website to configure your places and locks</string>
    <string name="no_lock">No locks for this place</string>
    <string name="share_empty_place_error">You can not share an empty place!</string>
    <string name="log_empty_place_error">You can not see the log of an empty place</string>
    <string name="share_error_empty_email">You have to enter an email address to share a lock!</string>
    <string name="new_user_html">New? <u>Get an account</u></string>
    <string name="forgot_html"><a href="https://www.kisi.de/users/password/new">Forgot your password?</a></string>
    <string name="missing_login_data">Please type in EMail and Password first</string>
    <string name="no_network">No network connectivity</string>
    <string name="login_loading_message">Logging you in...</string>
    <string name="account_type">de.kisi</string>
    <string name="add_new_account_done">Account created</string>
    <string name="error_creating_account">Error creating account</string>
    <string name="login_with_other_account">Login with another account</string>
    <string name="try_again">Try again</string>
    <string name="close_app">Exit</string>
    <string name="notification_settings">Notification settings</string>
    <string name="places_around">Places around</string>
    <string name="location_not_available_title">Improve security of keys</string>
    <string name="location_not_available_text">KISI needs to use the following services to improve the security of your keys.</string>
    <string name="place_overview">PLACES</string>
    <string name="about">About</string>
    <string name="version">Version:\t</string>
    <string name="geofence_not_available_title">Geofencing Not Available</string>
    <string name="geofence_not_available_text">Please, enable Wi-Fi or Network for location detection.</string>
    <string name="cancel">Cancel</string>
    <string name="dontaskagain">Later</string>
    <string name="ok">OK</string>
    <string name="location">Location Service</string>
    <string name="wifi">Wi-Fi</string>
    <string name="title_activity_take_atour">TakeATourActivity</string>
    <string name="no_access_to_lock">Unfortunately, you do not have access to this lock.</string>
    <string name="restricted_access">Access restricted</string>
    <string name="no_access_to_lock_log_in">Please log in to gain access to your locks.</string>
    <string name="automatic_relogin_failed">Automatic login failed. For your security, please sign in again.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_on">Bluetooth detection on</string>
    <string name="bluetooth_off">Bluetooth detection off</string>
    <string name="update"> New version available.\n<u>Touch here to update</u></string>
    <string name="registration_successful"> Registration is successful. You need to confirm your email.</string>
    <string name="passwords_not_match"> Passwords do not match!</string>
    <string name="password_length_error"> Password has to be at least 8 characters</string>
    <string name="email_not_valid"> E-Mail is not valid!</string>
    <string name="terms_and_conditions_not_agreed"> You need to agree to KISI\'s Terms &amp; Conditions.</string>
    <string name="unknown_error"> Unknown Error!</string>
    <string name="loading_message"> Please Wait..</string>
    <string name="terms_and_conditions"> Terms &amp; Conditions</string>
    <string name="back_to_login"><u>Go back to Login</u></string>
    <string name="first_name"> First name</string>
    <string name="last_name"> Last name</string>
    <string name="success_reg">Registration Successful!</string>
    <string name="successful_reg">We\'ve sent you an email to confirm your address. Please check your inbox and follow the instructions in the message.</string>
    <string name="click_login">Once done, come back to the KISI app and log in.</string>
    <string name="settings">SETTINGS</string>
    <string name="account">ACCOUNT</string>
    <string name="default_settings">default</string>
    <string name="Demo">Demo</string>
    <string name="leave_demo">Leave Demo</string>
    <string name="demo_warning">It\'s a demo account!</string>
    <string name="start_demo_message">Starting Demo</string>
    <string name="public_places">Public Places</string>
	<string name="public_place_ring">Ring</string>
	<string name="call_start">Call Start</string>
    <string name="call_canceled_by_caller">Call canceled by caller</string>
    <string name="call_not_possible">Calling this place is not possible</string>
    <string name="calling_the_place_owner">Calling the place owner. Please wait.</string>
    <string name="user_not_available">User is not available for video chat.</string>
    <string name="communication_error">Communication error occured.</string>
    <string name="video_chat">Video Chat</string>
	
</resources>