<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:paddingTop="15dp" >

    <LinearLayout
        android:id="@+id/place_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >
	
		
        <TextView
            android:id="@+id/shareTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_title"
            android:textSize="20sp" 
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" 
            />

        <TextView
            android:id="@+id/shareTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_popup_msg"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
           	android:layout_marginBottom="15dp" 
              />

        <EditText
            android:id="@+id/shareEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" >
        </EditText>

    </LinearLayout>
</ScrollView>
