<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/backgroundlogin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:id="@+id/placelinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/slogantwo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#B0CDEB"
            android:textSize="38sp" />



<!-- 		<EditText
            android:id="@+id/firstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#ffffff" >

            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#ffffff" /> -->

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#ffffff" />

        <TextView
            android:id="@+id/ErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#cf304b"
            android:visibility="gone" />

        <Button
            android:id="@+id/goToDemoAccountButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/register_button"
            android:text="@string/Demo"
            android:textColor="#ffffff" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#0F2938" >

        <Button
            android:id="@+id/backToLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/back_to_login"
            android:textColor="#ffffff"
            android:textSize="15sp" 
            android:background="@android:color/transparent"/>
    </RelativeLayout>

</RelativeLayout>
