<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/backgroundlogin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SuccessfulRegistrationActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:id="@+id/placelinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/success_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:text="@string/success_reg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#B0CDEB"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/placelinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="top"
                android:contentDescription="@string/logo"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/successful_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/successful_reg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#B0CDEB"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placelinearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >
            

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
            	android:layout_gravity="top"

                android:contentDescription="@string/logo"
                android:src="@drawable/launchericon" />

            <TextView
                android:id="@+id/click_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/click_login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#B0CDEB"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_button"
            android:text="@string/Login"
            android:textColor="#ffffff" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#0F2938" >
    </RelativeLayout>

</RelativeLayout>